--- a/sass/styles/_sidebar-collapse.scss
+++ b/sass/styles/_sidebar-collapse.scss
@@ -17,14 +17,22 @@
         position: absolute;
         top: 0;
         right: 0;
-        padding: 70px 40px;
-        
+        padding: 70px 0px;
+        .title{
+            padding-left: 40px;
+        }
         .mpwpb-sidebar-close{
             position:absolute;
             top: 40px;
             right: 15px;
             font-size: 20px;
             cursor: pointer;
+        }
+        .content{
+            height: 100%;
+            overflow-y: scroll;
+            padding:0 40px;
+            padding-bottom:40px;
         }
     }
     
